...
    <androidx.cardview.widget.CardView
        android:id="@+id/cardView5"
        android:layout_width="109dp"
        android:layout_height="136dp"
        android:layout_marginTop="96dp"
        app:cardBackgroundColor="#7E872C2C"
        app:layout_constraintBottom_toTopOf="@+id/GetStartedbutton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="MissingConstraints" />

...
